# simulated-laboratory

./: README.md  main.py  pyproject.toml
data/exames/: config_exames.json
