[tool.poetry]
name = "simlabs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reportlab = "^4.2.2"
openpyxl = "^3.1.5"
pymupdf = "^1.24.9"
ttkthemes = "^3.2.2"
numpy = "^2.0.1"
reportlab-qrcode = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
